Kubernetes.Ingress/customers-deployment.yaml
# =====================================
# customers-deployment.yaml
# =====================================

apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: customers-api
  template:
    metadata:
      labels:
        app: customers-api
    spec:
      containers:
      - name: api
        image: hashicorp/http-echo
        args: ["-text=👤 Customer API - Connection Successful"]

---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
spec:
  selector:
    app: customers-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
